try to fix agrona unsafe-api issue in PekkoHttpServerLatencyMultiNodeSpec (#888)
* try to fix agrona unsafe-api issue in PekkoHttpServerLatencyMultiNodeSpec

* temp run all tests in PRs

* Uncomment pull request validation step in workflow